--- a/syntax.css
+++ b/syntax.css
@@ -1,3 +1,26 @@
-.background{
-    background-image: url(image.jpg);
+header{
+    padding: 20px;
+    line-height: 0.5;
+    background-color: aquamarine;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+body{
+    margin: 50px ;
+
+}
+section{
+    background-color: antiquewhite;
+}
+
+section{
+    padding: 20px;
+}
+
+input[type="submit"]{
+
+    background-color: aquamarine;
+    border: 2px solid black;
+    width: 80px;
 }
